Changelog
=========

0.9.9 - Unreleased
------------------

- Install blob-enabled types from `plone.app.blob` during test setup.
  [witsch]

- Install the TinyMCE product during test runs.
  [hannosch]

- Add the sunburst theme to the default extension profiles for Plone 4.
  [davisagli]

- Specify dependencies in a backwards compatible way.
  [hannosch]

- Changed behavior of `default_extension_profiles`. We always add the default
  profiles now. You can still override this via passing in an explicit empty
  `default_extension_profiles` argument to the `setupPloneSite` function.
  [hannosch]

- Disentangle the product installation code for PLONE50 and before. The base
  amount of packages is quite different.
  [hannosch]

- Moved the Plone version determination code into its own module.
  [hannosch]

- Adjusted the PLONE40 constant to be PLONE50 and check for Plone trunk.
  [hannosch]

- In Plone trunk manually install the ATContentTypes default profile.
  [hannosch]

0.9.8 - 2009-04-16
------------------

- Protect against missing portal_quickinstaller tool.
  [hannosch]

- Fixed deprecation warnings for use of Globals.
  [hannosch]

- Adjusted _createHomeFolder to create the 'Members' folder if it isn't
  created by the site creation code.
  [hannosch]

- Adjusted PLONE40 check after the migrations have been moved out of the
  CMFPlone package.
  [hannosch]

- Added PLONE33 constant.
  [stefan]

0.9.8b4 - 2008-10-26
--------------------

- Added PLONE32 constant.
  [stefan]

0.9.8b3 - 2008-10-16
--------------------

- Bugfix: The default member-area was created before the portal
  was fully configured.
  [stefan]

- Bugfix: Reindex security of member-area after taking ownership.
  [stefan]

0.9.8b2 - 2008-10-09
--------------------

- Egg was broken due to use of svn export. Who'd have thunk
  setuptools makes a difference?
  [stefan]

0.9.8b1 - 2008-10-05
--------------------

- Install all Plone products quietly.
- Eggified Products.PloneTestCase.

0.9.7